Roll from platfrom2/cros-codecs
Changelog:
* Refactored bitstream parsing code to only use the log crate as a
  dependency.
* Added a simple local integration test.
* Modified ccdec to validate against metadata json.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,30 +8,27 @@ authors = ["The ChromiumOS Authors"]
 edition = "2021"
 
 [features]
-default = ["vaapi"]
-vaapi = ["libva"]
-v4l2 = ["v4l2r"]
+default = []
+vaapi = ["libva", "anyhow", "byteorder", "thiserror", "crc32fast", "nix"]
+v4l2 = ["v4l2r", "anyhow", "byteorder", "thiserror", "crc32fast", "nix"]
 
 [dependencies]
-anyhow = "1"
-bitreader = "0.3.6"
-byteorder = "1.4.3"
-bytes = "1.1.0"
-enumn = "0.1.4"
+anyhow = { version = "1.0.75", optional = true }
+byteorder = { version = "1.4.3", optional = true }
 libva = { version = "0.0.7", package = "cros-libva", optional = true }
-v4l2r = { version = "0.0.3", package = "v4l2r", optional = true }
+v4l2r = { version = "0.0.5", package = "v4l2r", optional = true }
 log = { version = "0", features = ["release_max_level_debug"] }
-thiserror = "1.0.31"
-crc32fast = "1.3.2"
-nix = { version = "0.29", features = ["fs", "event"] }
+thiserror = { version = "1.0.58", optional = true }
+crc32fast = { version = "1.3.2", optional = true }
+nix = { version = "0.28", features = ["fs", "event"], optional = true }
 
 [dev-dependencies]
-argh = "0.1"
-env_logger = "0.10.0"
+argh = "0.1.12"
+env_logger = "0.9.3"
 matroska-demuxer = "0.5.0"
-md5 = "0.7"
-drm = "0.11.0"
-gbm = { version = "0.14", default-features = false, features = ["drm-support"] }
+drm = "0.12.0"
+gbm = { version = "0.15", default-features = false, features = ["drm-support"] }
+serde_json = "1.0.96"
 
 [lints.rust]
 # Required to allow #[cfg(fuzzing)]
