--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ edition = "2021"
 
 [features]
 default = []
-vaapi = ["libva", "anyhow", "byteorder", "thiserror", "crc32fast", "nix"]
-v4l2 = ["v4l2r", "anyhow", "byteorder", "thiserror", "crc32fast", "nix"]
+backend = []
+vaapi = ["libva", "anyhow", "byteorder", "thiserror", "crc32fast", "nix", "backend"]
+v4l2 = ["v4l2r", "anyhow", "byteorder", "thiserror", "crc32fast", "nix", "backend"]
 
 [dependencies]
 anyhow = { version = "1.0.75", optional = true }
 byteorder = { version = "1.4.3", optional = true }
-libva = { version = "0.0.7", package = "cros-libva", optional = true }
+libva = { version = "0.0.12", package = "cros-libva", optional = true }
 v4l2r = { version = "0.0.5", package = "v4l2r", optional = true }
 log = { version = "0", features = ["release_max_level_debug"] }
 thiserror = { version = "1.0.58", optional = true }
@@ -36,8 +37,8 @@ unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
 
 [[example]]
 name = "ccdec"
-required-features = ["vaapi"]
+required-features = ["backend"]
 
 [[example]]
 name = "ccenc"
-required-features = ["vaapi"]
+required-features = ["backend"]
