Add Image Processing Perf Tests
This CL adds perf tests for cros codecs to measure performance of image
processing functions.

Bug: 383554203
Test: Ran perf_test binary on Corsola.
Change-Id: If26051dc63c1cd57677e178c2bbf9c9e30a33cd6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,7 @@ required-features = ["backend"]
 [[example]]
 name = "ccenc"
 required-features = ["backend"]
+
+[[example]]
+name = "perf_test"
+required-features = ["backend"]
