--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [features]
 default = []
-backend = ["anyhow", "byteorder", "thiserror", "crc32fast", "nix", "gbm", "drm"]
+backend = ["anyhow", "byteorder", "thiserror", "crc32fast", "nix", "gbm", "gbm-sys", "drm", "drm-fourcc"]
 vaapi = ["libva", "backend"]
 v4l2 = ["v4l2r", "backend"]
 
@@ -23,7 +23,9 @@ thiserror = { version = "1.0.58", optional = true }
 crc32fast = { version = "1.3.2", optional = true }
 nix = { version = "0.28", features = ["fs", "event"], optional = true }
 drm = { version = "0.12.0", optional = true }
+drm-fourcc = { version = "2.2.0", optional = true }
 gbm = { version = "0.15", default-features = false, features = ["drm-support"], optional = true }
+gbm-sys = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
 argh = "0.1.12"
