--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ v4l2r = { version = "0.0.5", package = "v4l2r", optional = true }
 log = { version = "0", features = ["release_max_level_debug"] }
 thiserror = { version = "1.0.58", optional = true }
 crc32fast = { version = "1.3.2", optional = true }
-nix = { version = "0.28", features = ["fs", "event"], optional = true }
+nix = { version = "0.28", features = ["fs", "event", "poll", "mman", "ioctl"], optional = true }
 drm = { version = "0.12.0", optional = true }
 drm-fourcc = { version = "2.2.0", optional = true }
 gbm = { version = "0.15", default-features = false, features = ["drm-support"], optional = true }
