--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [features]
 default = []
-backend = ["anyhow", "byteorder", "thiserror", "crc32fast", "nix", "gbm", "gbm-sys", "drm", "drm-fourcc"]
+backend = ["anyhow", "byteorder", "thiserror", "crc32fast", "nix", "gbm", "gbm-sys", "drm", "drm-fourcc", "zerocopy"]
 vaapi = ["libva", "backend"]
 v4l2 = ["v4l2r", "backend"]
 
@@ -26,6 +26,7 @@ drm = { version = "0.12.0", optional = true }
 drm-fourcc = { version = "2.2.0", optional = true }
 gbm = { version = "0.15", default-features = false, features = ["drm-support"], optional = true }
 gbm-sys = { version = "0.3.1", optional = true }
+zerocopy = { version = "0.8.14", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 argh = "0.1.12"
